--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 :root {
   font-family: "Alice", serif;
   font-weight: 400;
@@ -9,7 +14,7 @@
 body{
   background-image: url(assets/bg-image.jpg);
   background-repeat: no-repeat;
-  background-color: #573824 ;
+  background-size: cover;
   
 }
 
@@ -20,6 +25,17 @@ body{
   background-color:#F0E8C2;
   border-radius: 24px;
   margin: 48px auto;
+
+}
+main{
+  padding: 24px;
+
+}
+#about p + p {
+  margin-top: 24px;
+}
+section + section{
+  margin-top: 24px;
 
 }
 
@@ -33,7 +49,17 @@ h1{
 }
 h2{
   font-size: 24px;
+  color: #291b1a;
 }
-h1,h2{
-  color: #291B1A;
-}
+ ul{
+  padding-left: 24px;
+  margin-top: 12px;
+ }
+ p{
+  margin-top: 12px;
+ }
+ footer{
+  margin: 0 auto;
+  text-align: center;
+
+ }
